# embassy_preempt

./: .gitignore  .gitmodules  404.html  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: compile.yml  deploy.yml
docs/: README.md  embassy_preempt开发杂记.html  index.html  开发记录.html  开发记录.md  技术报告.html  技术报告.md  设计文档.html  设计文档.md  资料汇总.html  资料汇总.md
embassy-executor/tests/: test.rs
embassy_preempt/: .gdbinit  Cargo.toml  Drone.toml  JLinkDownload.jlink  Makefile  record.yml  test.sh
embassy_preempt/src/: os_core.rs  os_sem.rs  os_task.rs
embassy_preempt/src/app/: led.rs  mod.rs
embassy_preempt/src/cfg/: mod.rs
embassy_preempt/src/executor/: mod.rs  state_atomics_arm.rs  waker.rs
embassy_preempt/src/heap/: stack_allocator.rs
embassy_preempt/src/heap/linked_list/: mod.rs
embassy_preempt/src/os_time/: duration.rs  instant.rs  mod.rs  timer.rs
embassy_preempt/src/port/: lang_items.rs  mod.rs  os_cpu.rs
embassy_preempt/src/port/bottom_driver/: Bottom.rs  mod.rs
embassy_preempt/src/port/time_driver/: mod.rs
embassy_preempt/tests/: integration.rs
examples/stm32f401re/: .gdbinit  Cargo.toml  rust-toolchain.toml
examples/stm32f401re/src/: main.rs
performance_test/: rust-toolchain.toml
performance_test/block_delay/: Cargo.toml
performance_test/block_delay/src/: lib.rs
performance_test/c_embassy_preempt/: .clangd  JLinkDownload.jlink  Makefile  device.x  startup_stm32f401xe.s
performance_test/c_embassy_preempt/inc/: cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_cm4.h  mpu_armv7.h  tools.h
performance_test/c_embassy_preempt/src/: ffi_test.c  tools.c
performance_test/embassy/: Cargo.toml  build.rs
performance_test/embassy/.cargo/: config.toml
performance_test/embassy/src/: main.rs
performance_test/embassy_test/: Cargo.toml  JLinkDownload.jlink  Makefile  memory.x
performance_test/embassy_test/.cargo/: config.toml
performance_test/embassy_test/src/: lib.rs
performance_test/rust_uc/: .gdbinit  Cargo.toml  JLinkDownload.jlink  Makefile  memory.x
performance_test/rust_uc/src/: main.rs
performance_test/ucosii/: .gitignore  JLinkDownload.jlink  Makefile  STM32F401RETx_FLASH.ld  startup_stm32f401xe.s
performance_test/ucosii/Cfg/: os_cfg.h
performance_test/ucosii/Source/: os_core.c  os_task.c  ucos_ii.h
performance_test/ucosii/app/HARDWARE/: NVIC.h
performance_test/ucosii/app/inc/: OS_stk.h  main.h  stm32f401xe.h  stm32f4xx.h  tools.h
performance_test/ucosii/app/src/: main.c  space_performance.c  system_stm32f4xx.c  time_performance.c  tools.c
performance_test/ucosii/ports/: os_cpu_c.c
src/: README.md  SUMMARY.md
src/docs/: 技术报告.md
test/: Makefile  STM32F401RETx_FLASH.ld  ffi_test.c  memory.x
test/.cache/clangd/index/: cmsis_version.h.03401E40D9C315D7.idx  core_cm4.h.FDF125859BD3ECA1.idx  ffi_test.c.996A5E1634993446.idx  startup_stm32f401xe.s.AA034C823CE3533C.idx  stm32f401xe.h.2AE0D5BECA01D02B.idx  system_stm32f4xx.h.9478CEA06DA13601.idx
test/inc/: system_stm32f4xx.h
test/src/: ffi_test.c
ucosii/: .gdb_history  .gdbinit  Cargo.toml  JLinkDownload.jlink  JLinkGDBLog.yml  Makefile  bp.gdb  build.rs  expand.rs.bk  memory.x  record.yml  rust-toolchain.toml  test.sh  tmp.yaml  tmp_build.txt
ucosii/.cargo/: config.toml
ucosii/config/: Cargo.toml
ucosii/config/src/: layout.rs  lib.rs
ucosii/executor-macro/: Cargo.toml
ucosii/executor-macro/src/: lib.rs
ucosii/executor-macro/src/macros/: task.rs
ucosii/macros/: Cargo.toml
ucosii/macros-core/: Cargo.toml
ucosii/macros/src/: heap.rs  lib.rs
ucosii/src/: arena.rs  atomic_macros.rs  executor.rs  fmt.rs  lang_items.rs  lib.rs  os_core.rs  os_mem.rs  os_q.rs  os_task.rs  os_time.rs  stk_allocator.rs  ucosii.rs  util.rs
ucosii/src/app/: blockdelay.rs  led.rs  mod.rs
ucosii/src/cfg/: config.rs  mod.rs
ucosii/src/executor/: mod.rs  os_task.rs  run_queue_atomics.rs  spawner.rs  state_atomics_arm.rs  timer_queue.rs  waker.rs
ucosii/src/executor/raw/: mod.rs  run_queue_atomics.rs  state_atomics_arm.rs  waker.rs
ucosii/src/hal/: macro.rs
ucosii/src/heap/: fixed_size_block.rs  linked_list.rs  mod.rs  pool.rs  stack_allocator.rs  trace.rs
ucosii/src/heap/linked_list/: hole.rs  mod.rs
ucosii/src/helper/: linked_list.rs  macros.rs  mod.rs  runtime.rs
ucosii/src/os_time/: duration.rs  instant.rs  mod.rs  time_driver.rs  timer.rs
ucosii/src/platform/: mod.rs
ucosii/src/port/: lang_items.rs  mod.rs  os_cpu.rs
ucosii/src/port/bottom_driver/: mod.rs
ucosii/src/port/time_driver/: mod.rs
ucosii/src/sync/: up.rs
ucosii/stream/: Cargo.toml
ucosii/tests/: integration.rs  test.rs
