[package]
name = "rust_uc"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = { version = "0.7",features = ["device"]}
ucosii={ path="../../embassy_preempt", features=["memory-x","stm32f401re"] }
cortex-m-semihosting = "0.5.0"

[profile.release]
codegen-units = 1
opt-level = 1  # 优化级别 # <-
debug = 2

[features]
default = []
defmt = ["ucosii/defmt"]