[package]
name = "ucosii-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = """
Configuration for Drone, an Embedded Operating System.
"""

[dependencies]
ucosii-stream.workspace = true
eyre.workspace = true
indexmap = { version = "1.9.1", features = ["serde"] }
serde.workspace = true
toml = "0.5.9"
