[package]
name = "ucosii-executor-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.9"
darling = "0.20.1"
proc-macro2 = "1.0.29"

[lib]
proc-macro = true
[features]