[package]
name = "ucosii-macros-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = """
Procedural macros base for Drone, an Embedded Operating System.
"""

[dependencies]
once_cell = "1.14.0"
proc-macro2.workspace = true
quote.workspace = true
regex = "1.6.0"
syn = { workspace = true, features = ["full", "extra-traits"] }
